# recsys

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  script.sbatch
2tower-rec/: 2_trainval_general.ipynb
colbert/: 1.1_data.py  2_model.ipynb  configs.yaml  model.py
data/: raw.dvc
data/processed/: ml-1m.dvc
notebooks/: 2_trainval_general.ipynb
src/: __init__.py
src/2tower-rec/: 1_data_process.ipynb
src/colbert/: 1.1_data.py  1_data.ipynb  README.md  configs.yaml
src/gen_retrieval/: SemanticID.py
src/gen_retrieval/tests/: test_output.py
