[project]
name = "recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pickleshare>=0.7.5",
    "polars>=1.21.0",
    "scikit-learn>=1.6.1",
]
