[project]
name = "recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "lightning>=2.5.0.post0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pickleshare>=0.7.5",
    "polars>=1.21.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.18.0",
    "transformers>=4.49.0",
    "wandb>=0.19.7",
]

[dependency-groups]
dev = [
    "seaborn>=0.13.2",
    "torch-tb-profiler>=0.4.3",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "rich>=13.9.4",
    "ruff>=0.9.9",
    "jupyterlab>=4.3.5",
    "notebook>=7.3.2",
    "faiss-cpu>=1.10.0",
]
